--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/layout.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/layout.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>{% block title %}{% endblock %}</title>
+  <title>{% block title %}
+    {% endblock %}
+  </title>
 </head>
 <body>
 
-{% block content %}
-{% endblock %}
+  {% block content %}
+  {% endblock %}
 
 </body>
 </html>
