--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/index.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/index.html
@@ -22,7 +22,7 @@
                 <option value="{{component.id}}">{{component}}</option>
                 {% endfor %}
             </select>
-        </div
+        </div>
 
         <div class="component">
             <select name="component2" class="form-select">
