--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/index.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/index.html
@@ -15,12 +15,6 @@
     {% csrf_token %}
     <div id="componenetsSelection">
 
-        {% if not valid_components%}
-        <div class="alert alert-danger" role="alert">
-            The three componenents are not valid.
-        </div>
-        {% endif %}
-
         <div class="component">
             <select name="component1" class="form-select" >
                 <option selected>Choose component 1</option>
@@ -47,9 +41,18 @@
                 {% endfor %}
             </select>
         </div>
+
+        {% if not valid_components%}
+        <div class="alert alert-danger col-md-3" role="alert">
+            The three componenents are not valid.
+        </div>
+        {% endif %}
+
     </div>
 
 
     <input type="submit" value="Run" class="btn btn-primary">
+
+
 </form>
 {% endblock%}
