corrected mistake in last merge

--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/index.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/index.html
@@ -37,7 +37,7 @@ Home {%endblock%} {% block head %}
 
     {% if not valid_components%}
     <div class="alert alert-danger col-md-3" role="alert">
-      The three componenents are not valid.
+      The three components are not valid.
     </div>
     {% endif %}
   </div>
