--- a/backend_django/ternary_azeotrope/static/index.css
+++ b/backend_django/ternary_azeotrope/static/index.css
@@ -1,4 +1,16 @@
+h1 {
+    color: rgb(16, 65, 114);
+    text-align: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
 .component {
     margin-top: 20px;
     margin-bottom: 20px;
+}
+
+.spinner {
+    margin-top: 20px;
+
 }
