--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/index.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/index.html
@@ -65,11 +65,6 @@ Home {%endblock%} {% block head %}
     alt="Responsive image"
   />
   {% else %}
-  <div
-    id="spinner"
-    class="spinner-border text-primary"
-    role="status"
-    style="display: none"
-  ></div>
+  <div id="spinner" class="spinner-border text-primary" role="status"></div>
   {% endif %} {% endblock%}
 </div>
