--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/index.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/index.html
@@ -1,55 +1,75 @@
-{% extends 'ternary_azeotrope/layout.html' %}
+{% extends 'ternary_azeotrope/layout.html' %} {% load static %} {% block title%}
+Home {%endblock%} {% block head %}
 
-{% load static %}
-{% block title %}Home{%endblock%}
+<link rel="stylesheet" href="{% static 'index.css' %}" />
+<script
+  type="text/javascript"
+  src="{% static 'js/index.js'%}"
+  charset="utf-8"
+></script>
 
-{% block head %}
+{% endblock %} {% block content %}
 
-<link rel="stylesheet" href="{% static 'index.css' %}">
+<h1>Generate univolatility diagrams of ternary mixtures in Thermodynamic</h1>
 
-{% endblock %}
-
-{% block content %}
-
-<form action="{% url 'run' %}" method="post" class="container text-center">
-    {% csrf_token %}
-    <div id="componenetsSelection">
-
-        {% if not valid_components%}
-        <div class="alert alert-danger" role="alert">
-            The three componenents are not valid.
-        </div>
-        {% endif %}
-
-        <div class="component">
-            <select name="component1" class="form-select" >
-                <option selected>Choose component 1</option>
-                {% for component in componenents%}
-                <option value="{{component.id}}">{{component}}</option>
-                {% endfor %}
-            </select>
-        </div
-
-        <div class="component">
-            <select name="component2" class="form-select">
-                <option selected>Choose component 2</option>
-                {% for component in componenents%}
-                <option value="{{component.id}}">{{component}}</option>
-                {% endfor %}
-            </select>
-        </div>
-
-        <div class="component">
-            <select name="component3" class="form-select">
-                <option selected>Choose component 3</option>
-                {% for component in componenents%}
-                <option value="{{component.id}}">{{component}}</option>
-                {% endfor %}
-            </select>
-        </div>
+<form
+  action="{% url 'run' %}"
+  method="post"
+  class="container text-center"
+  id="components-selection"
+>
+  {% csrf_token %}
+  <div id="componenetsSelection">
+    <div class="component">
+      <select name="component1" class="form-select">
+        <option selected>Choose component 1</option>
+        {% for component in components%}
+        <option value="{{component.id}}">{{component}}</option>
+        {% endfor %}
+      </select>
     </div>
 
+    <div class="component">
+      <select name="component2" class="form-select">
+        <option selected>Choose component 2</option>
+        {% for component in components%}
+        <option value="{{component.id}}">{{component}}</option>
+        {% endfor %}
+      </select>
+    </div>
 
-    <input type="submit" value="Run" class="btn btn-primary">
+    <div class="component">
+      <select name="component3" class="form-select">
+        <option selected>Choose component 3</option>
+        {% for component in components%}
+        <option value="{{component.id}}">{{component}}</option>
+        {% endfor %}
+      </select>
+    </div>
+
+    {% if not valid_components%}
+    <div class="alert alert-danger col-md-3" role="alert">
+      The three components are not valid.
+    </div>
+    {% endif %}
+  </div>
+
+  <input id="submit-btn" type="submit" value="Run" class="btn btn-primary" />
 </form>
-{% endblock%}
+
+<div class="d-flex justify-content-center" id="diagram-container">
+  {% if diagram %}
+  <img
+    src="data:image/png;base64, {{diagram|safe}}"
+    class="img-fluid"
+    alt="Responsive image"
+  />
+  {% else %}
+  <div
+    id="spinner"
+    class="spinner-border text-primary"
+    role="status"
+    style="display: none"
+  ></div>
+  {% endif %} {% endblock%}
+</div>
