--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/menu.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/menu.html
@@ -9,9 +9,7 @@
 	<div id="menu-icon">&#9776;</div>
 	<nav id="menu">
 		<ul>
-			<li><a href="#">Link 1</a></li>
-			<li><a href="#">Link 2</a></li>
-			<li><a href="#">Link 3</a></li>
+			<li><a href="#">test</a></li>
 		</ul>
 	</nav>
 	<div id="content">
