--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/menu.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/menu.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Test menu</title>
-	<link rel="stylesheet" type="text/css" href="{% static 'menu.css' %}">
+	<link rel="stylesheet" href="{% static 'menu.css' %}">
 </head>
 <body>
 	<div id="menu-icon">&#9776;</div>
@@ -16,6 +16,6 @@
 		<h1>Menu Test</h1>
 		<p>click in the screen to hide the menu</p>
 	</div>
-	<script src="{% static 'js/menu.js'%}"></script>
+	<script type="text/javascript" src="{% static 'js/menu.js'%}" charset="utf-8"></script>
 </body>
 </html>
