--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/layout.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/layout.html
@@ -8,13 +8,16 @@
       rel="stylesheet"
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
+      
     />
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="{% static 'menu.css' %}">
+    <script type="text/javascript" src="{% static 'js/menu.js' %}" charset="utf-8"></script>
+    
 
     {% block head %} {% endblock %}
   </head>
   <body>
-    {% block content %} {% endblock %}
+      {% block bar %}{% include "ternary_azeotrope/menu.html" %}{% endblock%}
+      {% block content %} {% endblock %}
   </body>
 </html>
