identation error in index

--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/index.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/index.html
@@ -7,10 +7,14 @@ Home {%endblock%} {% block head %}
   src="{% static 'js/index.js'%}"
   charset="utf-8"
 ></script>
-<link rel="stylesheet" type="text/css" href="{% static 'menu.css' %}">
-    <script type="text/javascript" src="{% static 'js/menu.js' %}" charset="utf-8"></script>
+<link rel="stylesheet" type="text/css" href="{% static 'menu.css' %}" />
+<script
+  type="text/javascript"
+  src="{% static 'js/menu.js' %}"
+  charset="utf-8"
+></script>
 
-{% endblock %} {% block content %} 
+{% endblock %} {% block content %}
 
 <h1>Generate univolatility diagrams of ternary mixtures in Thermodynamic</h1>
 
