--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/layout.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/layout.html
@@ -19,7 +19,7 @@
     {% block head %} {% endblock %}
   </head>
   <body>
-    {% block bar %}{% include "ternary_azeotrope/menu.html" %}{% endblock%} {%
-    block content %} {% endblock %}
+    {% block bar %}{% include "ternary_azeotrope/menu.html" %}{% endblock%}
+    {%block content %} {% endblock %}
   </body>
 </html>
