spinner to show loading result while computation is running is now working

--- a/backend_django/ternary_azeotrope/static/index.css
+++ b/backend_django/ternary_azeotrope/static/index.css
@@ -8,11 +8,11 @@ h1 {
 .component {
     margin-top: 20px;
     margin-bottom: 20px;
+    background-color: antiquewhite;
 }
-
 
 
 #spinner {
     margin-top: 30px;
-
+    display: none;
 }
