--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/menu.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/menu.html
@@ -1,8 +1,8 @@
 
 	<div id="menu-icon">&#9776;</div>
 	<nav id="menu">
-		<ul>
-		</ul>
+		<div id="menu-icons">&#9776;</div>
+
 	</nav>
 	<div id="content">
 	
