--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/layout.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/layout.html
@@ -10,11 +10,13 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-hQfJZhR8e+oCNFy0c+uOKF6U5ln6dX+6rZ7VvKY/x6YJ7Vb+qp6Oz7nnvNvlCmNY8l9LZomSovlUrJJxEzDnQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-    <link rel="stylesheet" type="text/css" href="{% static 'menu.css' %}">
-    <script type="text/javascript" src="{% static 'js/menu.js' %}" charset="utf-8"></script>
-    
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      integrity="sha512-hQfJZhR8e+oCNFy0c+uOKF6U5ln6dX+6rZ7VvKY/x6YJ7Vb+qp6Oz7nnvNvlCmNY8l9LZomSovlUrJJxEzDnQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 
     <link rel="stylesheet" type="text/css" href="{% static 'menu.css' %}" />
     <script
@@ -22,7 +24,6 @@
       src="{% static 'js/menu.js' %}"
       charset="utf-8"
     ></script>
-
 
     {% block head %} {% endblock %}
   </head>
