added serializers for component and user objects in order to pass them to session's data, added their tests which were passed

--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/menu.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/menu.html
@@ -1,10 +1,5 @@
-
-	<div id="menu-icon">&#9776;</div>
-	<nav id="menu">
-		<div id="menu-icons">&#9776;</div>
-
-	</nav>
-	<div id="content">
-	
-	</div>
-
+<div id="menu-icon">&#9776;</div>
+<nav id="menu">
+  <div id="menu-icons">&#9776;</div>
+</nav>
+<div id="content"></div>
