--- a/backend_django/ternary_azeotrope/static/index.css
+++ b/backend_django/ternary_azeotrope/static/index.css
@@ -8,14 +8,112 @@ h1 {
 .component {
     margin-top: 20px;
     margin-bottom: 20px;
-    background-color: antiquewhite;
-}
+    display: flex; /* use flexbox to position the elements */
+    align-items: center; /* align items vertically */
+
+  }
+  
+  label {
+    margin-right: 10px; /* add some spacing between the label and selector */
+    width: 400px;
+    background-color: #cae5db;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+    font-weight: bold;
+    display: inline-block;
+    margin-bottom: 10px;
+  }
+
+  
+  
+  select {
+    flex: 1; /* set the selector to fill the remaining space */
+  }
+
+ 
+  
+  
 
 
 #spinner {
     margin-top: 30px;
     display: none;
 }
+
+.title-bar {
+    background-color: #C2E7D9;
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    overflow: hidden;
+  }
+
+  .bar {
+    width: 30px;
+    height: 3px;
+    background-color: #A6CFD5;
+    margin: 0 10px;
+    position: relative;
+    z-index: 2;
+  }
+
+  .bar:before,
+  .bar:after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: inherit;
+    transform: scaleX(0);
+    transition: transform 0.3s ease-in-out;
+    z-index: -1;
+  }
+
+  .bar:before {
+    top: -6px;
+  }
+
+  .bar:after {
+    bottom: -6px;
+  }
+
+  .bar:hover:before,
+  .bar:hover:after {
+    transform: scaleX(1);
+  }
+
+  .title {
+    color: #26408B;
+    text-transform: uppercase;
+    font-size: 30px;
+    letter-spacing: 2px;
+    position: relative;
+    z-index: 2;
+  }
+
+  .title span {
+    display: inline-block;
+    animation-name: color-change;
+    animation-duration: 6s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+  }
+
+  @keyframes color-change {
+    from {
+      color: #23c587;
+    }
+    to {
+      color: #A6CFD5;
+    }
+  }
+
+
+  
 
 
 
