--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/index.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/index.html
@@ -13,10 +13,22 @@ Home {%endblock%} {% block head %}
   src="{% static 'js/menu.js' %}"
   charset="utf-8"
 ></script>
+<link rel="stylesheet" type="text/css" href="{% static 'typeTriangle.css' %}" />
+<script
+  type="text/javascript"
+  src="{% static 'js/typeTriangle.js' %}"
+  charset="utf-8"
+></script>
 
 {% endblock %} {% block content %}
-
-<h1>Generate univolatility diagrams of ternary mixtures in Thermodynamic</h1>
+<div class="title-bar">
+  {% block bar %}{% include "ternary_azeotrope/menu.html" %}{% endblock%}
+  <div class="bar"></div>
+  <h1 class="title">
+    Generate univolatility diagrams of ternary mixtures in Thermodynamic
+  </h1>
+  <div class="bar"></div>
+</div>
 
 <form
   action="{% url 'run' %}"
@@ -27,8 +39,9 @@ Home {%endblock%} {% block head %}
   {% csrf_token %}
   <div id="componenetsSelection">
     <div class="component">
+      <label for="my-select">Select compound 1:</label>
       <select name="component1" class="form-select">
-        <option selected>Choose compound 1</option>
+        <option selected>Choose</option>
         {% for component in components%}
         <option value="{{component.id}}">{{component}}</option>
         {% endfor %}
@@ -36,8 +49,9 @@ Home {%endblock%} {% block head %}
     </div>
 
     <div class="component">
+      <label for="my-select">Select compound 2:</label>
       <select name="component2" class="form-select">
-        <option selected>Choose compound 2</option>
+        <option selected>Choose</option>
         {% for component in components%}
         <option value="{{component.id}}">{{component}}</option>
         {% endfor %}
@@ -45,8 +59,9 @@ Home {%endblock%} {% block head %}
     </div>
 
     <div class="component">
+      <label for="my-select">Select compound 3:</label>
       <select name="component3" class="form-select">
-        <option selected>Choose compound 3</option>
+        <option selected>Choose</option>
         {% for component in components%}
         <option value="{{component.id}}">{{component}}</option>
         {% endfor %}
@@ -54,18 +69,18 @@ Home {%endblock%} {% block head %}
     </div>
 
     <div class="component">
+      <label for="my-select"
+        >Choose Vapor pressure-Temperature equation model:</label
+      >
       <select name="component4" class="form-select">
-        <option selected>
-          Choose Vapor pressure-Temperature equation model
-        </option>
-        <option>ANTOINE</option>
+        <option selected>ANTOINE</option>
       </select>
     </div>
 
     <div class="component">
+      <label for="my-select">Choose Thermodynamic model:</label>
       <select name="component5" class="form-select">
-        <option selected>Choose Thermodynamic model</option>
-        <option>NRTL</option>
+        <option selected>NRTL</option>
       </select>
     </div>
 
