--- a/backend_django/ternary_azeotrope/static/index.css
+++ b/backend_django/ternary_azeotrope/static/index.css
@@ -1,113 +1,202 @@
 h1 {
-    color: rgb(16, 65, 114);
-    text-align: center;
-    margin-top: 50px;
-    margin-bottom: 50px;
+  color: rgb(16, 65, 114);
+  text-align: center;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 .component {
-    margin-top: 20px;
-    margin-bottom: 20px;
-    display: flex; /* use flexbox to position the elements */
-    align-items: center; /* align items vertically */
+  margin-top: 20px;
+  margin-bottom: 20px;
+  display: flex;
+  /* use flexbox to position the elements */
+  align-items: center;
+  /* align items vertically */
 
-  }
+}
 
-  label {
-    margin-right: 10px; /* add some spacing between the label and selector */
-    width: 400px;
-    background-color: #cae5db;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font-size: 16px;
-    font-weight: bold;
-    display: inline-block;
-    margin-bottom: 10px;
-  }
-
-
-
-  select {
-    flex: 1; /* set the selector to fill the remaining space */
-  }
+label {
+  margin-right: 10px;
+  /* add some spacing between the label and selector */
+  width: 400px;
+  background-color: #cae5db;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+  font-weight: bold;
+  display: inline-block;
+  margin-bottom: 10px;
+}
 
 
 
-
+select {
+  flex: 1;
+  /* set the selector to fill the remaining space */
+}
 
 
 #spinner {
-    margin-top: 30px;
-    display: none;
+  margin-top: 30px;
+  display: none;
 }
 
 .title-bar {
-    background-color: #C2E7D9;
-    height: 70px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    overflow: hidden;
+  background-color: #C2E7D9;
+  height: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  overflow: hidden;
+}
+
+.bar {
+  width: 30px;
+  height: 3px;
+  background-color: #A6CFD5;
+  margin: 0 10px;
+  position: relative;
+  z-index: 2;
+}
+
+.bar:before,
+.bar:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: inherit;
+  transform: scaleX(0);
+  transition: transform 0.3s ease-in-out;
+  z-index: -1;
+}
+
+.bar:before {
+  top: -6px;
+}
+
+.bar:after {
+  bottom: -6px;
+}
+
+.bar:hover:before,
+.bar:hover:after {
+  transform: scaleX(1);
+}
+
+.title {
+  color: #26408B;
+  text-transform: uppercase;
+  font-size: 30px;
+  letter-spacing: 2px;
+  position: relative;
+  z-index: 2;
+}
+
+.title span {
+  display: inline-block;
+  animation-name: color-change;
+  animation-duration: 6s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+
+@keyframes color-change {
+  from {
+    color: #23c587;
   }
 
-  .bar {
-    width: 30px;
-    height: 3px;
-    background-color: #A6CFD5;
-    margin: 0 10px;
-    position: relative;
-    z-index: 2;
+  to {
+    color: #A6CFD5;
   }
+}
 
-  .bar:before,
-  .bar:after {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: inherit;
-    transform: scaleX(0);
-    transition: transform 0.3s ease-in-out;
-    z-index: -1;
-  }
+.btn {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: bold;
+  transition: all 0.2s ease-in-out;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+  margin: 5px;
+  position: relative;
+  overflow: hidden;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
 
-  .bar:before {
-    top: -6px;
-  }
+.btn-primary {
+  background-color: #1d352c;
+  color: white;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
 
-  .bar:after {
-    bottom: -6px;
-  }
+.btn-secondary {
+  background-color: #182520;
+  color: white;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
 
-  .bar:hover:before,
-  .bar:hover:after {
-    transform: scaleX(1);
-  }
+.btn-primary.clicked {
+  background-color: #05125a;
+}
 
-  .title {
-    color: #26408B;
-    text-transform: uppercase;
-    font-size: 30px;
-    letter-spacing: 2px;
-    position: relative;
-    z-index: 2;
-  }
+.btn-secondary.clicked {
+  background-color: #05125a;
+}
 
-  .title span {
-    display: inline-block;
-    animation-name: color-change;
-    animation-duration: 6s;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-  }
+.btn span {
+  position: relative;
+  z-index: 1;
+}
 
-  @keyframes color-change {
-    from {
-      color: #23c587;
-    }
-    to {
-      color: #A6CFD5;
-    }
-  }
+.btn:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: -100%;
+  background-color: rgba(255, 255, 255, 0.2);
+  transition: all 0.2s ease-in-out;
+  z-index: 0;
+}
+
+.btn:hover {
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+}
+
+.btn:hover:after {
+  left: 0;
+}
+
+#compound-form {
+  padding-right: 30px;
+  padding-left: 30px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin: 20px 0;
+  background-color: #ccc;
+  border-radius: 10px;
+  margin-right: 100px;
+}
+
+#compound-form input[type="text"] {
+  height: 40px;
+  width: 150px;
+  margin-right: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 5px;
+  font-size: 16px;
+}
