--- a/backend_django/ternary_azeotrope/static/typeTriangle.css
+++ b/backend_django/ternary_azeotrope/static/typeTriangle.css
@@ -1,62 +1,62 @@
 .btn {
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-    font-weight: bold;
-    transition: all 0.2s ease-in-out;
-    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
-    margin: 5px;
-    position: relative;
-    overflow: hidden;
-    margin-top: 20px;
-    margin-bottom: 20px;
-  }
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: bold;
+  transition: all 0.2s ease-in-out;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+  margin: 5px;
+  position: relative;
+  overflow: hidden;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
 
-  .btn-primary {
-    background-color: #C2E7D9;
-    color: white;
-    margin-top: 20px;
-    margin-bottom: 20px;
-  }
+.btn-primary {
+  background-color: #1d352c;
+  color: white;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
 
-  .btn-secondary {
-    background-color: #C2E7D9;
-    color: white;
-    margin-top: 20px;
-    margin-bottom: 20px;
-  }
+.btn-secondary {
+  background-color: #182520;
+  color: white;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
 
-  .btn-primary.clicked {
-    background-color: #05125a;
-  }
+.btn-primary.clicked {
+  background-color: #05125a;
+}
 
-  .btn-secondary.clicked {
-    background-color: #05125a;
-  }
+.btn-secondary.clicked {
+  background-color: #05125a;
+}
 
-  .btn span {
-    position: relative;
-    z-index: 1;
-  }
+.btn span {
+  position: relative;
+  z-index: 1;
+}
 
-  .btn:after {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: -100%;
-    background-color: rgba(255, 255, 255, 0.2);
-    transition: all 0.2s ease-in-out;
-    z-index: 0;
-  }
+.btn:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: -100%;
+  background-color: rgba(255, 255, 255, 0.2);
+  transition: all 0.2s ease-in-out;
+  z-index: 0;
+}
 
-  .btn:hover {
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
-  }
+.btn:hover {
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+}
 
-  .btn:hover:after {
-    left: 0;
-  }
+.btn:hover:after {
+  left: 0;
+}
