--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/index.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/index.html
@@ -13,12 +13,6 @@ Home {%endblock%} {% block head %}
   src="{% static 'js/menu.js' %}"
   charset="utf-8"
 ></script>
-<link rel="stylesheet" type="text/css" href="{% static 'typeTriangle.css' %}" />
-<script
-  type="text/javascript"
-  src="{% static 'js/typeTriangle.js' %}"
-  charset="utf-8"
-></script>
 
 {% endblock %} {% block content %}
 <div class="title-bar">
@@ -93,6 +87,40 @@ Home {%endblock%} {% block head %}
 
   <input id="submit-btn" type="submit" value="Run" class="btn btn-primary" />
 </form>
+
+<div class="d-flex justify-content-center">
+  <div id="compound-form-container" style="display: none">
+    <form id="compound-form" action="{% url 'add_component' %}" method="post">
+      {% csrf_token %}
+      <input
+        type="text"
+        id="name-input"
+        placeholder="Compound Name"
+        name="name"
+        required
+      />
+
+      <input type="text" id="a-input" placeholder="A" name="a" required />
+      <input type="text" id="b-input" name="b" placeholder="B" required />
+      <input type="text" id="c-input" name="c" placeholder="C" required />
+      <input type="submit" value="Save" class="btn btn-primary" />
+    </form>
+  </div>
+
+  <input
+    id="add-compound-btn"
+    type="button"
+    value="Add new compound"
+    class="btn btn-primary"
+  />
+
+  <input
+    id="add-relation-btn"
+    type="button"
+    value="Add new binary relation"
+    class="btn btn-primary"
+  />
+</div>
 
 <div class="d-flex justify-content-center" id="diagram-container">
   {% if diagram %}
