--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/index.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/index.html
@@ -35,7 +35,6 @@ Home {%endblock%} {% block head %}
     <div class="component">
       <label for="my-select">Select compound 1:</label>
       <select name="component1" class="form-select">
-        <option selected>Choose</option>
         {% for component in components%}
         <option value="{{component.id}}">{{component}}</option>
         {% endfor %}
@@ -45,7 +44,6 @@ Home {%endblock%} {% block head %}
     <div class="component">
       <label for="my-select">Select compound 2:</label>
       <select name="component2" class="form-select">
-        <option selected>Choose</option>
         {% for component in components%}
         <option value="{{component.id}}">{{component}}</option>
         {% endfor %}
@@ -55,7 +53,6 @@ Home {%endblock%} {% block head %}
     <div class="component">
       <label for="my-select">Select compound 3:</label>
       <select name="component3" class="form-select">
-        <option selected>Choose</option>
         {% for component in components%}
         <option value="{{component.id}}">{{component}}</option>
         {% endfor %}
@@ -82,6 +79,8 @@ Home {%endblock%} {% block head %}
     <div class="alert alert-danger col-md-3" role="alert">
       The three components are not valid.
     </div>
+    {% elif message %}
+    <div class="alert alert-danger" role="alert">{{ message }}</div>
     {% endif %}
   </div>
 
