--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/index.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/index.html
@@ -120,6 +120,36 @@ Home {%endblock%} {% block head %}
   </div>
 </div>
 
+<div class="d-flex justify-content-center">
+  <div id="relation-form-container" style="display: none">
+    <form id="relation-form" action="{% url 'add_relation' %}" method="post">
+      {% csrf_token %}
+      <select name="component1" class="form-select" required>
+        {% for component in components %}
+        <option value="{{ component.pk }}">{{ component.name }}</option>
+        {% endfor %}
+      </select>
+
+      <select name="component2" class="form-select" required>
+        {% for component in components %}
+        <option value="{{ component.pk }}">{{ component.name }}</option>
+        {% endfor %}
+      </select>
+
+      <input type="number" step="any" name="a12" placeholder="A12" required />
+      <input type="number" step="any" name="a21" placeholder="A21" required />
+      <input
+        type="number"
+        step="any"
+        name="alpha"
+        placeholder="Alpha"
+        required
+      />
+      <input type="submit" value="Save" class="btn btn-primary" />
+    </form>
+  </div>
+</div>
+
 <div class="d-flex justify-content-center" id="diagram-container">
   {% if diagram %}
   <img
