add compound/relation are now shown when clicked even if there is a diagram, a small error was fixed

--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/index.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/index.html
@@ -158,6 +158,11 @@ Home {%endblock%} {% block head %}
     alt="Responsive image"
   />
   {% else %}
-  <div id="spinner" class="spinner-border text-primary" role="status"></div>
+  <div
+    id="spinner"
+    class="spinner-border text-primary"
+    role="status"
+    style="none"
+  ></div>
   {% endif %} {% endblock%}
 </div>
