created the table layout and included it in the menu template

--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/menu.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/menu.html
@@ -19,4 +19,10 @@
       />
     </svg>
   </div>
+  <div id="content" style="display: none">
+    {%include "ternary_azeotrope/table.html" with title="Components"
+    keys={{component_keys}} elements={{components}} %} {%include
+    "ternary_azeotrope/table.html" with title="Binary relations"
+    keys={{relation_keys}} elements={{relations}} %}
+  </div>
 </nav>
