--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/table.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/table.html
@@ -1,77 +1,29 @@
-
-<h2 id="table">Pure Compound table</h2>
+<h2 id="table">{{title}}</h2>
 <table>
-    <thead>
-        <tr>
-            <th>Id</th>
-            <th>Name</th>
-            <th>A</th>
-            <th>B</th>
-            <th>C</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>1</td>
-            <td>Acetate</td>
-            <td>...</td>
-            <td>...</td>
-            <td>...</td>
-        </tr>
-        <tr>
-            <td>2</td>
-            <td>Methanol</td>
-            <td>...</td>
-            <td>...</td>
-            <td>...</td>
-        </tr>
-        <tr>
-            <td>3</td>
-            <td>Hexane</td>
-            <td>...</td>
-            <td>...</td>
-            <td>...</td>
-        </tr>
-    </tbody>
-</table>
-
-<h2 id="interaction">Binary interaction Coefficients</h2>
-<table>
-    <thead>
-        <tr>
-            <th>Id</th>
-            <th>Compound i</th>
-            <th>Compound j</th>
-            <th>a(i,j)</th>
-            <th>a(j,i)</th>
-            <th>Alpha(i,j)</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>1</td>
-            <td>Acetate</td>
-            <td>Methanol</td>
-            <td>...</td>
-            <td>...</td>
-            <td>...</td>
-        </tr>
-        <tr>
-            <td>2</td>
-            <td>Acetate</td>
-            <td>Hexane</td>
-            <td>...</td>
-            <td>...</td>
-            <td>...</td>
-        </tr>
-        <tr>
-            <td>3</td>
-            <td>Methanol</td
-    <td>Hexane</td>
-        <td>...</td>
-        <td>...</td>
-        <td>...</td>
+  <thead>
+    <tr>
+      {% if keys%} {% for key in keys %}
+      <th>{{key}}</th>
+      {% endfor %} {% endif%}
     </tr>
-
-</tbody>
+  </thead>
+  <tbody>
+    {% if elements%} {% for element in elements%}
+    <tr>
+      <td>{{ element.id }}</td>
+      {% if "name" in keys %}
+      <td>{{ element.name }}</td>
+      <td>{{ element.a }}</td>
+      <td>{{ element.b }}</td>
+      <td>{{ element.c }}</td>
+      {% else %}
+      <td>{{ element.component1 }}</td>
+      <td>{{ element.component2 }}</td>
+      <td>{{ element.a12 }}</td>
+      <td>{{ element.a21 }}</td>
+      <td>{{ element.alpha }}</td>
+      {% endif %}
+    </tr>
+    {% endfor %} {% endif%}
+  </tbody>
 </table>
