--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/index.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/index.html
@@ -149,7 +149,6 @@ Home {%endblock%} {% block head %}
     </form>
   </div>
 </div>
-
 <div class="d-flex justify-content-center" id="diagram-container">
   {% if diagram %}
   <img
@@ -164,5 +163,10 @@ Home {%endblock%} {% block head %}
     role="status"
     style="none"
   ></div>
-  {% endif %} {% endblock%}
+  {% endif %}
 </div>
+
+{%block tables%} {%include "ternary_azeotrope/table.html" with
+title="Components" keys={{component_keys}} elements={{components}} %} {%include
+"ternary_azeotrope/table.html" with title="Binary relations"
+keys={{relation_keys}} elements={{relations}} %}{%endblock%} {% endblock%}
