created the tables templates and it is now include in the toogle menu but some we have some problems in styles to fix : everything in index should go to background + and menu should be scrollable

--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/index.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/index.html
@@ -165,8 +165,4 @@ Home {%endblock%} {% block head %}
   ></div>
   {% endif %}
 </div>
-
-{%block tables%} {%include "ternary_azeotrope/table.html" with
-title="Components" keys={{component_keys}} elements={{components}} %} {%include
-"ternary_azeotrope/table.html" with title="Binary relations"
-keys={{relation_keys}} elements={{relations}} %}{%endblock%} {% endblock%}
+{%endblock%}
