--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/layout.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/layout.html
@@ -11,6 +11,7 @@
     />
 
     <link rel="stylesheet" type="text/css" href="{% static 'menu.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'table.css' %}" />
     <script
       type="text/javascript"
       src="{% static 'js/menu.js' %}"
