--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/menu.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/menu.html
@@ -20,9 +20,6 @@
     </svg>
   </div>
   <div id="content" style="display: none">
-    {%include "ternary_azeotrope/table.html" with title="Components"
-    keys={{component_keys}} elements={{components}} %} {%include
-    "ternary_azeotrope/table.html" with title="Binary relations"
-    keys={{relation_keys}} elements={{relations}} %}
+    {%include "ternary_azeotrope/table.html" %}
   </div>
 </nav>
