--- a/backend_django/ternary_azeotrope/static/table.css
+++ b/backend_django/ternary_azeotrope/static/table.css
@@ -1,42 +1,43 @@
 /* Style pour la barre de navigation */
 nav {
-    background-color: #333;
-    overflow: hidden;
-  }
+  background-color: #333;
+  overflow: hidden;
+}
 
-  nav a {
-    float: left;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 18px;
-  }
+nav a {
+  float: left;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 18px;
+}
 
-  nav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
+nav a:hover {
+  background-color: #ddd;
+  color: black;
+}
 
-  /* Style pour les tableaux */
-  table {
-    border-collapse: collapse;
-    width: 100%;
-    max-width: 800px;
-    margin: auto;
-  }
+/* Style pour les tableaux */
+table {
+  border-collapse: collapse;
+  width: 100%;
+  max-width: 800px;
+  margin: auto;
+}
 
-  th, td {
-    padding: 8px;
-    text-align: left;
-    border-bottom: 1px solid #ddd;
-  }
+th,
+td {
+  padding: 8px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+}
 
-  th {
-    background-color: violet;
-    color: white;
-  }
+th {
+  background-color: rgb(55, 70, 55);
+  color: white;
+}
 
-  tr:nth-child(even) {
-    background-color: #f2f2f2;
-  }
+tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
