now buttons goes to bg when toggle opens

--- a/backend_django/ternary_azeotrope/static/index.css
+++ b/backend_django/ternary_azeotrope/static/index.css
@@ -13,6 +13,15 @@ h1 {
 
 }
 
+.main {
+  position: relative;
+  z-index: 999;
+}
+
+.title-bar {
+  z-index: 9999;
+}
+
 label {
   margin-right: 10px;
   /* add some spacing between the label and selector */
