--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/table.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/table.html
@@ -1,44 +1,48 @@
-<h2 id="table">Compounds</h2>
-<table>
-  <thead>
-    <tr>
-      {% for key in component_keys %}
-      <th>{{key}}</th>
+<div class="table-container">
+  <h2 id="table">Compounds</h2>
+  <table>
+    <thead>
+      <tr>
+        {% for key in component_keys %}
+        <th>{{key}}</th>
+        {% endfor %}
+      </tr>
+    </thead>
+    <tbody>
+      {% for element in components%}
+      <tr>
+        <td>{{ element.id }}</td>
+        <td>{{ element.name }}</td>
+        <td>{{ element.a }}</td>
+        <td>{{ element.b }}</td>
+        <td>{{ element.c }}</td>
+      </tr>
       {% endfor %}
-    </tr>
-  </thead>
-  <tbody>
-    {% for element in components%}
-    <tr>
-      <td>{{ element.id }}</td>
-      <td>{{ element.name }}</td>
-      <td>{{ element.a }}</td>
-      <td>{{ element.b }}</td>
-      <td>{{ element.c }}</td>
-    </tr>
-    {% endfor %}
-  </tbody>
-</table>
+    </tbody>
+  </table>
+</div>
 
-<h2 id="table">Binary relations</h2>
-<table>
-  <thead>
-    <tr>
-      {% for key in relation_keys %}
-      <th>{{key}}</th>
+<div class="table-container">
+  <h2 id="table">Binary relations</h2>
+  <table>
+    <thead>
+      <tr>
+        {% for key in relation_keys %}
+        <th>{{key}}</th>
+        {% endfor %}
+      </tr>
+    </thead>
+    <tbody>
+      {% for element in relations%}
+      <tr>
+        <td>{{ element.id }}</td>
+        <td>{{ element.component1.name }}</td>
+        <td>{{ element.component2.name }}</td>
+        <td>{{ element.a12 }}</td>
+        <td>{{ element.a21 }}</td>
+        <td>{{ element.alpha }}</td>
+      </tr>
       {% endfor %}
-    </tr>
-  </thead>
-  <tbody>
-    {% for element in relations%}
-    <tr>
-      <td>{{ element.id }}</td>
-      <td>{{ element.component1.name }}</td>
-      <td>{{ element.component2.name }}</td>
-      <td>{{ element.a12 }}</td>
-      <td>{{ element.a21 }}</td>
-      <td>{{ element.alpha }}</td>
-    </tr>
-    {% endfor %}
-  </tbody>
-</table>
+    </tbody>
+  </table>
+</div>
