menu is scrollable

--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/menu.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/menu.html
@@ -20,6 +20,6 @@
     </svg>
   </div>
   <div id="content" style="display: none">
-    {%include "ternary_azeotrope/table.html" %}
+    {%include "ternary_azeotrope/tables.html" %}
   </div>
 </nav>
