one col for components of binary relation

--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/tables.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/tables.html
@@ -36,8 +36,7 @@
       {% for element in relations%}
       <tr>
         <td>{{ element.id }}</td>
-        <td>{{ element.component1.name }}</td>
-        <td>{{ element.component2.name }}</td>
+        <td>{{ element.component1.name}} - {{element.component2.name }}</td>
         <td>{{ element.a12 }}</td>
         <td>{{ element.a21 }}</td>
         <td>{{ element.alpha }}</td>
