--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/layout.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/layout.html
@@ -18,6 +18,11 @@
       charset="utf-8"
     ></script>
 
+    <script
+      src="https://kit.fontawesome.com/14c9b83b2d.js"
+      crossorigin="anonymous"
+    ></script>
+
     {% block head %} {% endblock %}
   </head>
   <body>
