--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/tables.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/tables.html
@@ -1,5 +1,5 @@
 <div class="table-container">
-  <h2 id="table">Compounds</h2>
+  <h2 id="table">Antoine model compounds</h2>
   <table>
     <thead>
       <tr>
@@ -23,7 +23,7 @@
 </div>
 
 <div class="table-container">
-  <h2 id="table">Binary relations</h2>
+  <h2 id="table">NRTL Binary relations</h2>
   <table>
     <thead>
       <tr>
