--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/index.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/index.html
@@ -19,7 +19,7 @@ Home {%endblock%} {% block head %}
   {% include "ternary_azeotrope/menu.html" %}
   <div class="bar"></div>
   <h1 class="title">
-    Generate univolatility diagrams of ternary mixtures in Thermodynamic
+    Ternary  univolatility diagram generator
   </h1>
   <div class="bar"></div>
 </div>
@@ -34,7 +34,7 @@ Home {%endblock%} {% block head %}
     {% csrf_token %}
     <div id="componenetsSelection">
       <div class="component">
-        <label for="my-select">Select compound 1:</label>
+        <label for="my-select">Compound 1:</label>
         <select name="component1" class="form-select">
           {% for component in components%}
           <option value="{{component.id}}">{{component}}</option>
@@ -43,7 +43,7 @@ Home {%endblock%} {% block head %}
       </div>
 
       <div class="component">
-        <label for="my-select">Select compound 2:</label>
+        <label for="my-select">Compound 2:</label>
         <select name="component2" class="form-select">
           {% for component in components%}
           <option value="{{component.id}}">{{component}}</option>
@@ -52,7 +52,7 @@ Home {%endblock%} {% block head %}
       </div>
 
       <div class="component">
-        <label for="my-select">Select compound 3:</label>
+        <label for="my-select">Compound 3:</label>
         <select name="component3" class="form-select">
           {% for component in components%}
           <option value="{{component.id}}">{{component}}</option>
@@ -62,7 +62,7 @@ Home {%endblock%} {% block head %}
 
       <div class="component">
         <label for="my-select"
-          >Choose Vapor pressure-Temperature equation model:</label
+          >Vapor pressure-Temperature equation</label
         >
         <select name="component4" class="form-select">
           <option selected>ANTOINE</option>
@@ -70,7 +70,7 @@ Home {%endblock%} {% block head %}
       </div>
 
       <div class="component">
-        <label for="my-select">Choose Thermodynamic model:</label>
+        <label for="my-select">Thermodynamic model</label>
         <select name="component5" class="form-select">
           <option selected>NRTL</option>
         </select>
