--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/index.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/index.html
@@ -19,7 +19,7 @@ Home {%endblock%} {% block head %}
   {% include "ternary_azeotrope/menu.html" %}
   <div class="bar"></div>
   <h1 class="title">
-    Generate univolatility diagrams of ternary mixtures in Thermodynamic
+    Ternary univolatility diagram generator
   </h1>
   <div class="bar"></div>
 </div>
@@ -62,16 +62,15 @@ Home {%endblock%} {% block head %}
 
       <div class="component">
         <label for="my-select"
-          >Choose Vapor pressure-Temperature equation model:</label
-        >
-        <select name="component4" class="form-select">
+          >Choose Vapor pressure-Temperature equation model:</label>
+        <select name="component4" class="form-select blocked" disabled>
           <option selected>ANTOINE</option>
         </select>
       </div>
 
       <div class="component">
         <label for="my-select">Choose Thermodynamic model:</label>
-        <select name="component5" class="form-select">
+        <select name="component5" class="form-select blocked" disabled>
           <option selected>NRTL</option>
         </select>
       </div>
