--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/index.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/index.html
@@ -18,151 +18,172 @@ Home {%endblock%} {% block head %}
 <div class="title-bar">
   {% include "ternary_azeotrope/menu.html" %}
   <div class="bar"></div>
-  <h1 class="title">
-    Ternary univolatility diagram generator
-  </h1>
+  <h1 class="title">Ternary univolatility diagram generator</h1>
   <div class="bar"></div>
 </div>
 
-<div id="main">
-  <form
-    action="{% url 'run' %}"
-    method="post"
-    class="container text-center"
-    id="components-selection"
-  >
-    {% csrf_token %}
-    <div id="componenetsSelection">
-      <div class="component">
-        <label for="my-select">Compound 1:</label>
-        <select name="component1" class="form-select">
-          {% for component in components%}
-          <option value="{{component.id}}">{{component}}</option>
-          {% endfor %}
-        </select>
+<div id="index-content">
+  <div id="main">
+    <form
+      action="{% url 'run' %}"
+      method="post"
+      class="container text-center"
+      id="components-selection"
+    >
+      {% csrf_token %}
+      <div id="componenetsSelection">
+        <div class="component">
+          <label for="my-select">Compound 1:</label>
+          <select name="component1" class="form-select">
+            {% for component in components%}
+            <option value="{{component.id}}">{{component}}</option>
+            {% endfor %}
+          </select>
+        </div>
+
+        <div class="component">
+          <label for="my-select">Compound 2:</label>
+          <select name="component2" class="form-select">
+            {% for component in components%}
+            <option value="{{component.id}}">{{component}}</option>
+            {% endfor %}
+          </select>
+        </div>
+
+        <div class="component">
+          <label for="my-select">Compound 3:</label>
+          <select name="component3" class="form-select">
+            {% for component in components%}
+            <option value="{{component.id}}">{{component}}</option>
+            {% endfor %}
+          </select>
+        </div>
+
+        <div class="component">
+          <label for="my-select">Vapor pressure-Temperature equation</label>
+          <select name="component4" class="form-select blocked" disabled>
+            <option selected>ANTOINE</option>
+          </select>
+        </div>
+
+        <div class="component">
+          <label for="my-select">Thermodynamic model</label>
+          <select name="component5" class="form-select blocked" disabled>
+            <option selected>NRTL</option>
+          </select>
+        </div>
+
+        {% if alert_message %}
+        <div class="alert alert-danger" role="alert">{{ alert_message }}</div>
+        {% elif info_message %}
+        <div class="alert alert-info" role="alert">{{ info_message }}</div>
+        {% endif %}
       </div>
 
-      <div class="component">
-        <label for="my-select">Compound 2:</label>
-        <select name="component2" class="form-select">
-          {% for component in components%}
-          <option value="{{component.id}}">{{component}}</option>
-          {% endfor %}
-        </select>
+      <input
+        id="submit-btn"
+        type="submit"
+        value="Run"
+        class="btn btn-primary"
+      />
+      <input
+        id="add-compound-btn"
+        type="button"
+        value="Add new compound"
+        class="btn btn-primary"
+      />
+
+      <input
+        id="add-relation-btn"
+        type="button"
+        value="Add new binary relation"
+        class="btn btn-primary"
+      />
+    </form>
+
+    <div class="d-flex justify-content-center">
+      <div id="compound-form-container" style="display: none">
+        <form
+          id="compound-form"
+          action="{% url 'add_component' %}"
+          method="post"
+        >
+          {% csrf_token %}
+          <input
+            type="text"
+            id="name-input"
+            placeholder="Compound Name"
+            name="name"
+            required
+          />
+
+          <input type="text" id="a-input" placeholder="A" name="a" required />
+          <input type="text" id="b-input" name="b" placeholder="B" required />
+          <input type="text" id="c-input" name="c" placeholder="C" required />
+          <input type="submit" value="Save" class="btn btn-primary" />
+        </form>
       </div>
-
-      <div class="component">
-        <label for="my-select">Compound 3:</label>
-        <select name="component3" class="form-select">
-          {% for component in components%}
-          <option value="{{component.id}}">{{component}}</option>
-          {% endfor %}
-        </select>
-      </div>
-
-      <div class="component">
-        <label for="my-select"
-          >Vapor pressure-Temperature equation</label>
-        <select name="component4" class="form-select blocked" disabled>
-
-          <option selected>ANTOINE</option>
-        </select>
-      </div>
-
-      <div class="component">
-
-        <label for="my-select">Thermodynamic model</label>
-        <select name="component5" class="form-select blocked" disabled>
-          <option selected>NRTL</option>
-        </select>
-      </div>
-
-
-      {% if alert_message %}
-      <div class="alert alert-danger" role="alert">{{ alert_message }}</div>
-      {% elif info_message %}
-      <div class="alert alert-info" role="alert">{{ info_message }}</div>
-      {% endif %}
     </div>
 
-    <input id="submit-btn" type="submit" value="Run" class="btn btn-primary" />
-    <input
-      id="add-compound-btn"
-      type="button"
-      value="Add new compound"
-      class="btn btn-primary"
-    />
+    <div class="d-flex justify-content-center">
+      <div id="relation-form-container" style="display: none">
+        <form
+          id="relation-form"
+          action="{% url 'add_relation' %}"
+          method="post"
+        >
+          {% csrf_token %}
+          <select name="component1" class="form-select" required>
+            {% for component in components %}
+            <option value="{{ component.pk }}">{{ component.name }}</option>
+            {% endfor %}
+          </select>
 
-    <input
-      id="add-relation-btn"
-      type="button"
-      value="Add new binary relation"
-      class="btn btn-primary"
-    />
-  </form>
+          <select name="component2" class="form-select" required>
+            {% for component in components %}
+            <option value="{{ component.pk }}">{{ component.name }}</option>
+            {% endfor %}
+          </select>
 
-  <div class="d-flex justify-content-center">
-    <div id="compound-form-container" style="display: none">
-      <form id="compound-form" action="{% url 'add_component' %}" method="post">
-        {% csrf_token %}
-        <input
-          type="text"
-          id="name-input"
-          placeholder="Compound Name"
-          name="name"
-          required
-        />
-
-        <input type="text" id="a-input" placeholder="A" name="a" required />
-        <input type="text" id="b-input" name="b" placeholder="B" required />
-        <input type="text" id="c-input" name="c" placeholder="C" required />
-        <input type="submit" value="Save" class="btn btn-primary" />
-      </form>
+          <input
+            type="number"
+            step="any"
+            name="a12"
+            placeholder="A12"
+            required
+          />
+          <input
+            type="number"
+            step="any"
+            name="a21"
+            placeholder="A21"
+            required
+          />
+          <input
+            type="number"
+            step="any"
+            name="alpha"
+            placeholder="Alpha"
+            required
+          />
+          <input type="submit" value="Save" class="btn btn-primary" />
+        </form>
+      </div>
     </div>
-  </div>
 
-  <div class="d-flex justify-content-center">
-    <div id="relation-form-container" style="display: none">
-      <form id="relation-form" action="{% url 'add_relation' %}" method="post">
-        {% csrf_token %}
-        <select name="component1" class="form-select" required>
-          {% for component in components %}
-          <option value="{{ component.pk }}">{{ component.name }}</option>
-          {% endfor %}
-        </select>
-
-        <select name="component2" class="form-select" required>
-          {% for component in components %}
-          <option value="{{ component.pk }}">{{ component.name }}</option>
-          {% endfor %}
-        </select>
-
-        <input type="number" step="any" name="a12" placeholder="A12" required />
-        <input type="number" step="any" name="a21" placeholder="A21" required />
-        <input
-          type="number"
-          step="any"
-          name="alpha"
-          placeholder="Alpha"
-          required
-        />
-        <input type="submit" value="Save" class="btn btn-primary" />
-      </form>
-    </div>
-  </div>
-  <div class="d-flex justify-content-center" id="diagram-container">
-    {% if curves %}
-    {% include "ternary_azeotrope/chart.html"%}
-    {% else %}
+    {% if not curves %}
     <div
       id="spinner"
       class="spinner-border text-primary"
       role="status"
-      style="none"
+      style="display: none"
     ></div>
     {% endif %}
   </div>
 
+  <div class="d-flex justify-content-center" id="diagram-container">
+    {% if curves %} {% include "ternary_azeotrope/chart.html"%} {% endif %}
+  </div>
 </div>
-</div>
+
 {%endblock%}
