--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/menu.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/menu.html
@@ -19,7 +19,5 @@
       />
     </svg>
   </div>
-  <div id="content" style="display: none">
-    {%include "ternary_azeotrope/tables.html" %}
-  </div>
+  <div id="content">{%include "ternary_azeotrope/tables.html" %}</div>
 </nav>
