--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/typeTriangle.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/typeTriangle.html
@@ -7,8 +7,8 @@
 ></script>
 
 <button class="btn btn-primary" onclick="toggleButton(this)">
-  <span>Cartesian</span>
+  <span>Rectangle</span>
 </button>
-<button class="btn btn-secondary" onclick="toggleButton(this)">
-  <span>Orthogonal</span>
+<button class="btn btn-secondary" onclick="toggleButton(this)" disabled>
+  <span>Equilateral</span>
 </button>
