form will take 100% of the page if the diagram is not displayed yet

--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/chart.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/chart.html
@@ -117,5 +117,7 @@
     });
   }
 
+  const diagram = document.getElementById("diagram-container");
+  diagram.style.width = "50%";
   draw();
 </script>
