delete from table

--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/tables.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/tables.html
@@ -9,7 +9,7 @@
       .icon {
         color: rgb(55, 70, 55);
         cursor: pointer;
-        position: relative;
+        font-size: 24px;
       }
     </style>
   </head>
